--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -16,8 +16,10 @@
   <main>
     <section id="day1">
       <h2>Day 1: Arrival, Batu Caves, and Bukit Bintang</h2>
-      <p>Arrive at Kuala Lumpur International Airport (KLIA).</p>
-      <p>Take the KLIA Express to KL Sentral Station.</p>
+      <p>Arrive at Kuala Lumpur International Airport (KLIA). Take a moment to soak in the vibrant energy of Malaysia's capital city as you travel to your hotel.</p>
+      <p>Your journey begins with a scenic ride on the KLIA Express to KL Sentral Station, offering a smooth and efficient transfer to the heart of the city.</p>
+      <p>First, explore the majestic Batu Caves, a famous Hindu temple complex nestled in limestone caves. Don’t forget to take a moment to climb the 272 steps leading up to the cave.</p>
+      <p>In the afternoon, head to Bukit Bintang, the bustling shopping and entertainment district. Enjoy a romantic stroll, shopping, or indulge in the street food that makes this area famous.</p>
 
       <!-- Image container for Day 1 -->
       <div class="section-images">
@@ -29,7 +31,10 @@
 
     <section id="day2">
       <h2>Day 2: Petronas Twin Towers, Perdana Botanical Gardens, and Chinatown</h2>
-      <p>Visit the iconic Petronas Twin Towers, the tallest twin towers in the world.</p>
+      <p>Your second day begins with a visit to the iconic Petronas Twin Towers, the tallest twin towers in the world. Take the elevator to the Skybridge and enjoy stunning views of Kuala Lumpur's skyline.</p>
+      <p>Next, unwind at the Perdana Botanical Gardens, a tranquil green space in the heart of the city. Take a peaceful walk or relax by the lake, surrounded by lush greenery and diverse wildlife.</p>
+      <p>For lunch, head to Chinatown (Petaling Street) and immerse yourself in the local culture. Enjoy delicious street food such as Hainanese chicken rice, and browse through stalls selling souvenirs and crafts.</p>
+      <p>End your day by exploring Alor Street Food Night Market, a must-visit spot for foodies, where you can try a variety of local dishes in an energetic atmosphere.</p>
 
       <!-- Image container for Day 2 -->
       <div class="section-images">
@@ -42,7 +47,10 @@
 
     <section id="day3">
       <h2>Day 3: Genting Highlands and Resorts World Genting Theme Park</h2>
-      <p>Take a bus or cable car to Genting Highlands.</p>
+      <p>Take a thrilling bus or cable car ride to Genting Highlands, a popular hill resort offering breathtaking views and cool weather.</p>
+      <p>Spend your day at the Resorts World Genting Theme Park. Experience the thrilling rides and attractions, including the exciting roller coasters and interactive shows that both adults and kids will enjoy.</p>
+      <p>Explore the SkyAvenue Mall, which offers shopping, dining, and entertainment under one roof. Don’t miss Ripley's Believe It or Not Odditorium for a mix of fun and curiosities.</p>
+      <p>For an adventurous end to the day, visit the Skytropolis Indoor Theme Park, where you can enjoy various games, rides, and entertainment in an indoor setting.</p>
 
       <!-- Image container for Day 3 -->
       <div class="section-images">
@@ -56,41 +64,45 @@
 
     <section id="day4">
       <h2>Day 4: Departure</h2>
-      <p>Check out of your hotel and take the KLIA Express to the airport.</p>
+      <p>On your final day, check out of your hotel and head back to KLIA Express for a comfortable ride to the airport. Reflect on the memories you’ve made on this unforgettable honeymoon trip.</p>
+      <p>Don’t forget to grab some last-minute souvenirs before catching your flight back to Phnom Penh, marking the end of your honeymoon in Kuala Lumpur.</p>
+
+      <!-- Image container for Day 4 -->
       <div class="section-images">
         <img src="klia2.jpg" alt="KLIA Express train" class="uniform-img">
       </div>
-      <p>Catch your flight back to Phnom Penh.</p>
     </section>
 
     <section id="must-tries">
       <h2>Must-Try Foods and Attractions</h2>
+      <p>Make sure to indulge in some of Malaysia's famous dishes during your stay in Kuala Lumpur. From street food to fine dining, you'll find flavors to satisfy every taste.</p>
       <ul>
-        <li>Nasi Lemak</li>
-        <li>Char Kway Teow</li>
-        <li>Roti Canai</li>
-        <li>Satay</li>
-        <li>Laksa</li>
-        <li>Petronas Twin Towers</li>
-        <li>Batu Caves</li>
-        <li>Chinatown</li>
-        <li>Genting Highlands</li>
-        <li>Resorts World Genting Theme Park</li>
+        <li><strong>Nasi Lemak:</strong> A traditional Malay dish of coconut rice served with sambal, fried anchovies, and a hard-boiled egg.</li>
+        <li><strong>Char Kway Teow:</strong> Stir-fried flat rice noodles with prawns, eggs, and bean sprouts.</li>
+        <li><strong>Roti Canai:</strong> A flaky, buttery flatbread served with dhal (lentil curry) or meat curry.</li>
+        <li><strong>Satay:</strong> Skewered grilled meat served with peanut sauce.</li>
+        <li><strong>Laksa:</strong> A spicy noodle soup made with coconut milk and a variety of fresh ingredients.</li>
+        <li><strong>Petronas Twin Towers:</strong> The symbol of Kuala Lumpur, a must-see for any traveler.</li>
+        <li><strong>Batu Caves:</strong> A sacred site with towering Hindu statues and caves to explore.</li>
+        <li><strong>Chinatown:</strong> A lively neighborhood filled with food, shopping, and cultural experiences.</li>
+        <li><strong>Genting Highlands:</strong> A resort destination with stunning views, amusement parks, and entertainment.</li>
+        <li><strong>Resorts World Genting Theme Park:</strong> One of the best theme parks in the region, offering rides and fun for all ages.</li>
       </ul>
     </section>
 
     <section id="budget">
       <h2>Budget</h2>
+      <p>Here's a rough guide to how much you can expect to spend on your honeymoon in Kuala Lumpur.</p>
       <ul>
-        <li>Accommodation: Face Suites (approximately $25 per night)</li>
-        <li>Transportation: KLIA Express ($15), KTM Komuter ($0.25), buses (variable), Grab or Uber (variable)</li>
-        <li>Food: Street food (approximately $3-5 per meal)</li>
+        <li><strong>Accommodation:</strong> Face Suites – approximately $25 per night for a cozy stay.</li>
+        <li><strong>Transportation:</strong> KLIA Express – $15, KTM Komuter – $0.25, buses (variable), and Grab or Uber (variable).</li>
+        <li><strong>Food:</strong> Street food – approximately $3-5 per meal, fine dining and restaurants will vary in price.</li>
       </ul>
     </section>
 
     <section id="directions">
       <h2>Directions</h2>
-      <p>Use Google Maps for detailed directions between locations.</p>
+      <p>Use Google Maps to navigate around Kuala Lumpur and discover the best routes to all the must-see attractions.</p>
       <a href="https://www.google.com/maps" target="_blank">Google Maps</a>
     </section>
 
