--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         <img src="batu.jpg" alt="Batu Caves" class="uniform-img">
         <img src="bukit.jpg" alt="Bukit Bintang" class="uniform-img">
       </div>
+
+      <!-- Google Map for Batu Caves -->
+      <div class="map-container">
+        <h3>Map: Batu Caves</h3>
+        <iframe src="https://www.google.com/maps/embed/v1/place?key=YOUR_GOOGLE_MAPS_API_KEY&q=Batu+Caves,+Gombak,+Malaysia" allowfullscreen></iframe>
+      </div>
     </section>
 
     <section id="day2">
@@ -43,33 +49,11 @@
         <img src="china.jpg" alt="Chinatown Kuala Lumpur" class="uniform-img">
         <img src="alor.jpg" alt="Alor Street Food Night Market" class="uniform-img">
       </div>
-    </section>
 
-    <section id="day3">
-      <h2>Day 3: Genting Highlands and Resorts World Genting Theme Park</h2>
-      <p>Take a thrilling bus or cable car ride to Genting Highlands, a popular hill resort offering breathtaking views and cool weather.</p>
-      <p>Spend your day at the Resorts World Genting Theme Park. Experience the thrilling rides and attractions, including the exciting roller coasters and interactive shows that both adults and kids will enjoy.</p>
-      <p>Explore the SkyAvenue Mall, which offers shopping, dining, and entertainment under one roof. Don’t miss Ripley's Believe It or Not Odditorium for a mix of fun and curiosities.</p>
-      <p>For an adventurous end to the day, visit the Skytropolis Indoor Theme Park, where you can enjoy various games, rides, and entertainment in an indoor setting.</p>
-
-      <!-- Image container for Day 3 -->
-      <div class="section-images">
-        <img src="genting.jpg" alt="Genting Highlands" class="uniform-img">
-        <img src="skyworld.jpg" alt="Genting SkyWorlds Theme Park" class="uniform-img">
-        <img src="avenue.jpg" alt="SkyAvenue Mall" class="uniform-img">
-        <img src="ripleys.jpg" alt="Ripley's Believe It or Not Odditorium" class="uniform-img">
-        <img src="skytropolis.jpg" alt="Skytropolis Indoor Theme Park" class="uniform-img">
-      </div>
-    </section>
-
-    <section id="day4">
-      <h2>Day 4: Departure</h2>
-      <p>On your final day, check out of your hotel and head back to KLIA Express for a comfortable ride to the airport. Reflect on the memories you’ve made on this unforgettable honeymoon trip.</p>
-      <p>Don’t forget to grab some last-minute souvenirs before catching your flight back to Phnom Penh, marking the end of your honeymoon in Kuala Lumpur.</p>
-
-      <!-- Image container for Day 4 -->
-      <div class="section-images">
-        <img src="klia2.jpg" alt="KLIA Express train" class="uniform-img">
+      <!-- Google Map for Petronas Twin Towers -->
+      <div class="map-container">
+        <h3>Map: Petronas Twin Towers</h3>
+        <iframe src="https://www.google.com/maps/embed/v1/place?key=YOUR_GOOGLE_MAPS_API_KEY&q=Petronas+Twin+Towers,+Kuala+Lumpur,+Malaysia" allowfullscreen></iframe>
       </div>
     </section>
 
@@ -112,6 +96,5 @@
     <p>© 2024 John and Duday's Honeymoon</p>
   </footer>
 
-  <script src="script.js"></script>
 </body>
 </html>
